hphp/hack/test/package/package_access/illegal_cross_package_with_requirepackage_attr2.php.exp.v1
error: Typing[4472] Cannot reference this __RequirePackage function [1]
-> This function is marked with __RequirePackage("pkg2") [2]
-> pkg2 is not included in the current environment [1]

illegal_cross_package_with_requirepackage_attr2.php--a.php:11:7
     3 | 
     4 | class A {
[2]  5 |   <<__RequirePackage("pkg2")>>
     6 |   public function test() : void {
     7 |   }
     8 | }
     9 | function test(): void {
    10 |   $x = new A();
[1] 11 |   $x->test(); // error
    12 | }

1 error found
